--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/adapter-cloudflare": "^1.0.0-next.2",
     "svelte-frappe-charts": "^1.9.2"
   }
 }
