--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "@sveltejs/kit": "1.0.0-next.250",
     "autoprefixer": "^10.3.7",
     "cssnano": "^5.0.8",
-    "postcss": "^8.3.9",
-    "postcss-load-config": "^3.1.0",
     "svelte": "^3.48.0",
-    "svelte-preprocess": "^4.9.8",
-    "tailwindcss": "next"
+    "svelte-preprocess": "^4.9.8"
   },
   "type": "module",
   "dependencies": {
